dist_man1_MANS=

if BUILD_QOGECOIND
  dist_man1_MANS+=qogecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=qogecoin-qt.1
endif

if BUILD_QOGECOIN_CLI
  dist_man1_MANS+=qogecoin-cli.1
endif

if BUILD_QOGECOIN_TX
  dist_man1_MANS+=qogecoin-tx.1
endif

if BUILD_QOGECOIN_UTIL
  dist_man1_MANS+=qogecoin-util.1
endif

if ENABLE_WALLET
if BUILD_QOGECOIN_WALLET
  dist_man1_MANS+=qogecoin-wallet.1
endif
endif
